static/style.scss
---
# Stuff
---

@import url(https://fonts.googleapis.com/css?family=Wallpoet);
@import url(https://fonts.googleapis.com/css?family=Droid+Sans);

$blueish: #11a0be;
$lightgray: #D1D1D1;
$darkgray: #F5F5F5;
$textcolor: #333;

html {
    height: 100%;
}

a {
	// text-decoration: none;
    color: $blueish;
}

p {
    line-height: 1.5rem;
}

body {
	max-width: 1000px;
    min-width: 300px;
	margin: 0 auto;
    color: $textcolor;
    font-family: 'Droid Sans', sans-serif;
    height: 100%;
}

header {
    margin-bottom: 40px;

    a {
        text-decoration: none;
    }

    h1 {
        font-size: 3rem;
    	font-family: 'Wallpoet',cursive;
        font-weight: normal;
        padding: 1rem 0;
        margin: 0;
    }

    ul {
    	list-style: none;
    	display: flex;
    	justify-content: space-around;
    	padding: 0;
        margin: 0;
    }

    ul a {
        padding: 1em 0;
        flex-grow: 1;
        text-align: center;
        border: solid 1px $lightgray;
        border-left: none;
        transition: box-shadow .2s ease;
    }

    ul a:first-child {
        border-left: solid 1px $lightgray;
    }

    ul a:hover { box-shadow: inset 0 -5px $blueish}

    .nav {
        a {
            color: $textcolor;
        }
    }

    @media (max-width:400px) {
        ul {
            flex-flow: row wrap;
        }

        ul a {
            flex: 1 100%;
            border-top: none;
        }

        ul a:first-child {
            border-top: solid 1px $lightgray;
        }
    }
}

.wrapper {
    min-height: calc(100% - 20px);
}

.post {
    border: 1px solid $lightgray;
    background-color: $darkgray;
    margin-bottom: 40px;

    li {
        margin-top: 1rem;
    }

    img {
        max-width: 100%;
        max-height: 400px;
        height: auto;
        display: block;
    }

    .post-heading {
        display: inline;
        position: relative;
        top: -18px;
        left: 50px;
        background-color: white;
        border: solid 1px $lightgray;
        padding: 0 8px;
        white-space: nowrap;

        a {
            color: $textcolor;
            text-decoration: none;
        }
    }

    .post-content {
        margin-top: -18px;
        padding-left: 10px;
        padding-right: 10px;
    }



    .highlight {
        background-color: black;
        padding: 5px;
        color: white;
        margin: 5px;

        pre {
            overflow: auto;
            margin: 0;
        }
    }



    .post-footer {
        border-top: solid 1px $lightgray;
        display: flex;
        justify-content: space-between;
        padding: 5px 10px;

        span {
            flex: 1 30%;

        }

        .comments {
            text-align: center;
        }

        .tags {
            text-align: right;
        }
    }

    @media (max-width:400px) {
        .post-heading {
            display: block;
            top: 0;
            left: 0;
            background-color: transparent;
            border: none;
            padding: 0 8px;
            white-space: normal;
        }
    }
}

.pagination {
    text-align: center;
}

.footer {
    border: solid 1px $lightgray;
    background-color: $darkgray;
	text-align: center;
    height: 20px;
    margin-top: 10px;
}

